--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Beta2 
	- Fixed problem where democratic play wouldn't send to localplay
		and would just display a blank screen
	- Added Multi-Character Filter on browse pages
	- Fixed Flag Management Interface
	- Added Export Catalog to CSV
	- Added 'Add New...' option to other fields on Song Edit (Thx picasso)
	- Fixed incorrect index on localplay playlist after track deletion
	- Fixed lack of high-light of current playing item on localplay
		playlist
	- Fixed problem where second send to MPD would invalidate all 
		previous songs on the playlist
	- Fixed LastFM album art gather so it ignores noimage results from 
		lastfm
	- Fixed downsample remote so that is downsamples those not in the
		network def rather then those inside the network def
	- Fixed issue with page-a-nation on show catalogs page
	- Fixed removal of rating from db when 'unrating' the object (Thx flashk)
	- Fixed Itunes Export (Thx flashk)
	- Fixed session start failure when use_auth is off and you have
		no pre-existing cookie
	- Fixed print_tags.inc file to catalog matching, now fuzzy like it
		should be
	- Fixed bug where file pattern would be ignored if there were no
		tags in file
	- Replaced " " with "\s" on Pattern Match Logic
	- Removed extra space on default Last.FM username/password
	- Fixed LastFM plugin username and password checking to not even try
		if there is no username or password

--------------------------------------------------------------------------
  v.3.4-Beta1 12/25/2007 
	- Added Metadata (.directory or desktop.ini) when using the 
		/bin/dump_album_art.inc file
	- Added 'Add New...' option to Album on Song Edit (Thx picasso)
	- Fixed multiple login check 